--- a/Examples/iOS/TwitterClient-iOS/TwitterClient-iOS.xcodeproj/xcshareddata/xcschemes/SECoreText.xcscheme
+++ b/Examples/iOS/TwitterClient-iOS/TwitterClient-iOS.xcodeproj/xcshareddata/xcschemes/SECoreText.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0500"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1469DB3017F3587F00ADDA7E"
-               BuildableName = "TwitterClient-iOS.app"
-               BlueprintName = "TwitterClient-iOS"
+               BlueprintIdentifier = "6C0CA7641D1D07A30042A700"
+               BuildableName = "SECoreText.framework"
+               BlueprintName = "SECoreText"
                ReferencedContainer = "container:TwitterClient-iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,26 +28,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6C0CA76D1D1D07A30042A700"
-               BuildableName = "SECoreTextTests.xctest"
-               BlueprintName = "SECoreTextTests"
-               ReferencedContainer = "container:TwitterClient-iOS.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1469DB3017F3587F00ADDA7E"
-            BuildableName = "TwitterClient-iOS.app"
-            BlueprintName = "TwitterClient-iOS"
-            ReferencedContainer = "container:TwitterClient-iOS.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -61,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1469DB3017F3587F00ADDA7E"
-            BuildableName = "TwitterClient-iOS.app"
-            BlueprintName = "TwitterClient-iOS"
+            BlueprintIdentifier = "6C0CA7641D1D07A30042A700"
+            BuildableName = "SECoreText.framework"
+            BlueprintName = "SECoreText"
             ReferencedContainer = "container:TwitterClient-iOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -80,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1469DB3017F3587F00ADDA7E"
-            BuildableName = "TwitterClient-iOS.app"
-            BlueprintName = "TwitterClient-iOS"
+            BlueprintIdentifier = "6C0CA7641D1D07A30042A700"
+            BuildableName = "SECoreText.framework"
+            BlueprintName = "SECoreText"
             ReferencedContainer = "container:TwitterClient-iOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
